--- a/android/app/src/main/res/values-v31/styles.xml
+++ b/android/app/src/main/res/values-v31/styles.xml
@@ -9,7 +9,7 @@
 
 
 
-        <item name="android:windowIsTranslucent">true</item>
+     <!--   <item name="android:windowIsTranslucent">true</item>-->
 
     </style>
 </resources>
